@@ -1,5 +1,9 @@
 2009-06-05  Ulrich Drepper  <drepper@redhat.com>
 
+	* sysdeps/x86_64/rawmemchr.S: Minor optimization.
+
+	* sysdeps/x86_64/multiarch/rawmemchr.S: New file.
+
 	* sysdeps/x86_64/multiarch/strlen.S: New file.
 	* sysdeps/x86_64/multiarch/ifunc-defines.sym: New file.
 	* sysdeps/x86_64/multiarch/Makefile: Add rule to build ifunc-defines.h.
